tantalum_parser/src/tests/snapshots/tantalum_parser__tests__expression__Negation.snap
---
source: tantalum_parser/src/tests/expression.rs
expression: result
snapshot_kind: text
---
Ok(Expression(
  span: Span(
    start: Location(
      file_name: "Negation",
      position: 0,
      line: 1,
      column: 1,
    ),
    end: Location(
      file_name: "Negation",
      position: 2,
      line: 1,
      column: 3,
    ),
  ),
  kind: UnaryOperation(
    operator: UnaryOperator(
      span: Span(
        start: Location(
          file_name: "Negation",
          position: 0,
          line: 1,
          column: 1,
        ),
        end: Location(
          file_name: "Negation",
          position: 1,
          line: 1,
          column: 2,
        ),
      ),
      kind: Negation,
    ),
    operand: Expression(
      span: Span(
        start: Location(
          file_name: "Negation",
          position: 1,
          line: 1,
          column: 2,
        ),
        end: Location(
          file_name: "Negation",
          position: 2,
          line: 1,
          column: 3,
        ),
      ),
      kind: IntegerLiteral(
        value: "1",
        radix: 10,
      ),
    ),
  ),
))
