tantalum_parser/src/tests/snapshots/tantalum_parser__tests__expression__array_access.snap
---
source: tantalum_parser/src/tests/expression.rs
expression: result
snapshot_kind: text
---
Ok(Spanned(
  span: Span(
    start: Location(
      file_name: "array_access",
      position: 0,
      line: 1,
      column: 1,
    ),
    end: Location(
      file_name: "array_access",
      position: 6,
      line: 1,
      column: 7,
    ),
  ),
  data: Index(Index(
    object: Spanned(
      span: Span(
        start: Location(
          file_name: "array_access",
          position: 0,
          line: 1,
          column: 1,
        ),
        end: Location(
          file_name: "array_access",
          position: 3,
          line: 1,
          column: 4,
        ),
      ),
      data: Variable(Variable(
        name: Spanned(
          span: Span(
            start: Location(
              file_name: "array_access",
              position: 0,
              line: 1,
              column: 1,
            ),
            end: Location(
              file_name: "array_access",
              position: 3,
              line: 1,
              column: 4,
            ),
          ),
          data: "foo",
        ),
      )),
    ),
    index: Spanned(
      span: Span(
        start: Location(
          file_name: "array_access",
          position: 4,
          line: 1,
          column: 5,
        ),
        end: Location(
          file_name: "array_access",
          position: 5,
          line: 1,
          column: 6,
        ),
      ),
      data: Literal(Integer(Integer(
        value: Spanned(
          span: Span(
            start: Location(
              file_name: "array_access",
              position: 4,
              line: 1,
              column: 5,
            ),
            end: Location(
              file_name: "array_access",
              position: 5,
              line: 1,
              column: 6,
            ),
          ),
          data: "1",
        ),
        radix: 10,
      ))),
    ),
  )),
))
