tantalum_parser/src/tests/snapshots/tantalum_parser__tests__expression__type_cast.snap
---
source: tantalum_parser/src/tests/expression.rs
expression: result
snapshot_kind: text
---
Ok(Expression(
  span: Span(
    start: Location(
      file_name: "type_cast",
      position: 0,
      line: 1,
      column: 1,
    ),
    end: Location(
      file_name: "type_cast",
      position: 4,
      line: 1,
      column: 5,
    ),
  ),
  kind: TypeCast(
    ty: Type(
      span: Span(
        start: Location(
          file_name: "type_cast",
          position: 2,
          line: 1,
          column: 3,
        ),
        end: Location(
          file_name: "type_cast",
          position: 4,
          line: 1,
          column: 5,
        ),
      ),
      kind: Named("u8"),
    ),
    expression: Expression(
      span: Span(
        start: Location(
          file_name: "type_cast",
          position: 0,
          line: 1,
          column: 1,
        ),
        end: Location(
          file_name: "type_cast",
          position: 1,
          line: 1,
          column: 2,
        ),
      ),
      kind: IntegerLiteral(
        value: "1",
        radix: 10,
      ),
    ),
  ),
))
